assets/css/main.css
/* ... */
/* Medium */

	@media screen and (max-width: 980px) {

		/* List */

			ul.major-icons li {
				padding: 2em;
			}

				ul.major-icons li .icon {
					height: 7em;
					line-height: 7em;
					width: 7em;
				}

		/* Main */

			.main {
				padding: 5em 3em 3em 3em ;
			}

		/* Header */

			#header {
				padding: 8em 3em 8em 3em ;
			}

		/* Footer */

			#footer {
				padding: 5em 3em 5em 3em ;
			}

		/* One */

			#one {
				text-align: center;
			}

		/* Two */

			#two {
				text-align: center;
			}

	}

/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 12pt;
			}

			h1 {
				font-size: 1.75em;
			}

			h2 {
				font-size: 1.5em;
			}

			h3 {
				font-size: 1.1em;
			}

			h4 {
				font-size: 1em;
			}

		/* List */

			ul.major-icons li {
				padding: 1.5em;
			}

				ul.major-icons li .icon {
					height: 5em;
					line-height: 5em;
					width: 5em;
				}

					ul.major-icons li .icon:before {
						font-size: 42px;
					}

		/* Icon */

			.icon.major {
				margin: 0 0 1em 0;
			}

		/* Button */

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			button,
			.button {
				height: 3em;
				line-height: 3em;
			}

		/* Main */

			.main {
				padding: 3em 1.5em 1em 1.5em ;
			}

		/* Header */

			#header {
				padding: 4em 3em 4em 3em ;
			}

				#header .actions {
					margin: 2em 0 0 0;
				}

		/* Footer */

			#footer {
				padding: 3em 1.5em 3em 1.5em ;
			}

	}

/* XSmall */

	@media screen and (max-width: 480px) {

		/* Button */

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			.button {
				padding: 0;
			}

		/* Main */

			.main {
				padding: 2em 1.5em 0.1em 1.5em ;
			}

		/* Header */

			#header {
				padding: 4em 2em 4em 2em ;
			}

				#header br {
					display: none;
				}

		/* Footer */

			#footer {
				padding: 2em 1.5em 2em 1.5em ;
			}

				#footer .copyright {
					margin: 1.5em 0 0 0;
				}

					#footer .copyright li {
						border: 0;
						display: block;
						margin: 1em 0 0 0;
						padding: 0;
					}

						#footer .copyright li:first-child {
							margin-top: 0;
						}

	}

/* XXSmall */

	@media screen and (max-width: 320px) {

		/* Basic */

			html, body {
				min-width: 320px;
			}

		/* Main */

			.main {
				padding: 2em 1em 0.1em 1em ;
			}

		/* Header */

			#header {
				padding: 3em 1em 3em 1em ;
			}

		/* Footer */

			#footer {
				padding: 2em 1em 2em 1em ;
			}

	}

	@media (max-width: 768px) {
		.icon-logo {
			display: none;
		}
	}
	.image.fit img {
		width: 100%; /* Makes the image responsive by setting its width relative to its parent container */
		height: auto; /* Maintains the aspect ratio of the image */
	}

	.col-6 col-12-medium {
		display: flex;
		font-size: 1.2em;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		text-align: center;
		height: 100%; /* Adjust height as needed, or remove if not necessary */
	}
	.experience_section {
		display: flex;           /* Establishes a flex container */
		flex-direction: column;  /* Stacks children vertically */
		align-items: center;     /* Centers children horizontally in the flex container */
		text-align: center;      /* Centers the text within children */
		width: 100%;             /* Ensures the div takes full width of its container */
		padding: 20px;           /* Optional: Adds space inside the div */
	}
	
	.experience_header {
		padding: 20vw;  /* Starts with a viewport-relative padding */
		text-align: center;  /* Ensures text is centered within the header */
	}
	
	

	
	
	

